Fixed gap between buttons

--- a/src/scss/_media.scss
+++ b/src/scss/_media.scss
@@ -185,7 +185,7 @@
       grid-row: 2;
       display: grid;
       padding: 10px;
-      grid-gap: 20px;
+      grid-gap: 10px;
       background: map-get($palette, background-secondary);
       border: 1px solid map-get($palette, text-variant-1);
       border-radius: 0 0 6px 6px;
